<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- AppBarLayout com Toolbar fixa -->
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/toolbarColor"
            app:title="Editar Evento"
            app:titleTextColor="@android:color/white"
            app:navigationIcon="@drawable/ic_arrow_back" />
    </com.google.android.material.appbar.AppBarLayout>

    <!-- Conteúdo rolável -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:orientation="vertical"
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewTituloTela"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Editar Evento"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginBottom="16dp"/>

            <!-- Campo de Título -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/titulo_do_evento">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextTitulo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Campo de Contato -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contato"
                android:layout_marginTop="16dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextContato"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Campo de Data -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/data_ex"
                android:layout_marginTop="16dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextData"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Spinner para Hora de Início -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Hora de Início"
                android:layout_marginTop="16dp"/>
            <Spinner
                android:id="@+id/spinnerHoraInicio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                android:layout_marginTop="8dp"/>

            <!-- Spinner para Hora de Término -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Hora de Término"
                android:layout_marginTop="16dp"/>
            <Spinner
                android:id="@+id/spinnerHoraTermino"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                android:layout_marginTop="8dp"/>

            <!-- Spinner para Local (Espaço) -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Local"
                android:layout_marginTop="16dp" />
            <Spinner
                android:id="@+id/spinnerEspaco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                android:layout_marginTop="8dp"/>

            <!-- RadioGroup para Pagamento -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Pagamento"
                android:layout_marginTop="16dp" />
            <RadioGroup
                android:id="@+id/radioGroupPagamento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/radio50"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="50% Pago" />
                <RadioButton
                    android:id="@+id/radio100"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="100% Pago" />
            </RadioGroup>

            <!-- Botões -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonLimpar"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/limpar"
                android:layout_marginTop="16dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSalvar"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/salvar"
                android:layout_marginTop="8dp"/>
        </LinearLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
